fixed spacing between buttons

--- a/frontend/src/components/home/midsection/mid.css
+++ b/frontend/src/components/home/midsection/mid.css
@@ -45,7 +45,7 @@
 
 /* buttons for news and events */
 .ym-button {
-  margin: 0 20px 0 0;
+  margin-right: 25px;
 }
 
 .footer-image-header {
